<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="query_hint_artist">Insert Artist Name</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_settings">Settings</string>

    <string name="track">Track</string>
    <string name="artist">Artist</string>
    <string name="action_share">Share</string>

    <!-- Label for the country code preference [CHAR LIMIT=30] -->
    <string name="pref_country_code_label">Country Code</string>

    <!-- Key name for storing country code in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_country_code_key" translatable="false">countrycode</string>

    <string-array name="pref_country_entries">
        <item>Italy</item>
        <item>United States</item>
    </string-array>
    <string-array name="pref_country_entryValues">
        <item>IT</item>
        <item>US</item>
    </string-array>


    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">SpotifyStreamer Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="artist_image" translatable="true">Artist Image</string>
    <string name="album_image" translatable="true">Album Image</string>
    <string name="pause_image" translatable="true">Pause</string>
    <string name="resume_image" translatable="true">Play</string>
    <string name="next_image" translatable="true">Next Track</string>
    <string name="previous_image" translatable="true">Previous Track</string>

</resources>
