<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:background="@color/teal"
    android:layout_height="64dp">

    <ImageView
        android:id="@+id/album_thumbnail"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/album_image"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/track"/>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/artist"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/play_previous_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/previous_image"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/resume_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/resume_image"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/pause_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_pause"
            android:contentDescription="@string/pause_image"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/play_next_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/next_image"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</LinearLayout>